# 3DP-Driver-Core

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  vcpkg.json
contracts/: endstop.json  extruder.json  fan.json  history.json  motion.json  system.json  temperature.json
include/application/config/: ConfigManager.hpp
include/application/controllers/: ApplicationController.hpp
include/application/monitor/: SystemMonitor.hpp
include/connector/: CommandRegistry.hpp  Connector.hpp
include/connector/bus/: RemoteCommandBus.hpp
include/connector/client/: WebSocketClient.hpp
include/connector/controllers/: HeartbeatController.hpp  PrinterCheckController.hpp  PrinterCommandController.hpp  PrinterControlController.hpp
include/connector/events/: BaseReceiver.hpp  BaseSender.hpp
include/connector/events/heartbeat/: HeartbeatReceiver.hpp  HeartbeatSender.hpp
include/connector/events/printer-check/: PrinterCheckReceiver.hpp  PrinterCheckSender.hpp
include/connector/events/printer-command/: PrinterCommandReceiver.hpp  PrinterCommandSender.hpp
include/connector/events/printer-control/: PrinterPauseReceiver.hpp  PrinterStartReceiver.hpp  PrinterStopReceiver.hpp
include/connector/handlers/: PingCommandHandler.hpp
include/connector/kafka/: KafkaConfig.hpp  KafkaConsumerBase.hpp  KafkaProducerBase.hpp
include/connector/models/: BaseModel.hpp  Command.hpp  Event.hpp
include/connector/models/heartbeat/: HeartbeatRequest.hpp  HeartbeatResponse.hpp
include/connector/models/printer-check/: PrinterCheckRequest.hpp  PrinterCheckResponse.hpp
include/connector/models/printer-command/: PrinterCommandRequest.hpp  PrinterCommandResponse.hpp
include/connector/models/printer-control/: PrinterPauseRequest.hpp  PrinterStartRequest.hpp  PrinterStopRequest.hpp
include/connector/processors/: BaseProcessor.hpp
include/connector/processors/heartbeat/: HeartbeatProcessor.hpp
include/connector/processors/printer-check/: PrinterCheckProcessor.hpp
include/connector/processors/printer-command/: PrinterCommandProcessor.hpp
include/connector/processors/printer-control/: PrinterControlProcessor.hpp
include/connector/registry/: CommandRegistry.hpp
include/connector/utils/: Config.hpp  Time.hpp
include/core/: CommandBuilder.hpp  CommandContext.hpp  CommandExecutor.hpp  DriverInterface.hpp  PrinterInterface.hpp  SerialPort.hpp
include/core/command/: CommandCategoryInterface.hpp
include/core/command/endstop/: EndstopCommands.hpp
include/core/command/extruder/: ExtruderCommands.hpp
include/core/command/fan/: FanCommands.hpp
include/core/command/history/: HistoryCommands.hpp
include/core/command/motion/: MotionCommands.hpp
include/core/command/system/: SystemCommands.hpp
include/core/command/temperature/: TemperatureCommands.hpp
include/core/events/: EventSystem.hpp
include/core/exceptions/: DuplicateErrorCommandException.hpp  ResendErrorCommandException.hpp
include/core/logger/: Logger.hpp
include/core/printer/: ErrorRecovery.hpp  PrintState.hpp  Printer.hpp
include/core/printer/impl/: RealPrinter.hpp
include/core/printer/job/: GCodeDownloader.hpp  PrintJobManager.hpp  PrintJobProgress.hpp  PrintJobState.hpp
include/core/printer/state/: StateTracker.hpp
include/core/queue/: CommandExecutorQueue.hpp
include/core/serial/: SerialPort.hpp
include/core/serial/handler/: SerialProtocolHandler.hpp
include/core/serial/impl/: RealSerialPort.hpp
include/core/types/: Error.hpp  Position.hpp  Result.hpp
include/core/utils/: FloatFormatter.hpp
include/logger/: Logger.hpp
include/translator/: GCodeTranslator.hpp
include/translator/dispatchers/: ICommandDispatcher.hpp
include/translator/dispatchers/endstop/: EndstopDispatcher.hpp
include/translator/dispatchers/extruder/: ExtruderDispatcher.hpp
include/translator/dispatchers/fan/: FanDispatcher.hpp
include/translator/dispatchers/history/: HistoryDispatcher.hpp
include/translator/dispatchers/motion/: MotionDispatcher.hpp
include/translator/dispatchers/system/: SystemDispatcher.hpp
include/translator/dispatchers/temperature/: TemperatureDispatcher.hpp
include/translator/exceptions/: GCodeTranslatorInvalidCommandException.hpp  GCodeTranslatorUnknownCommandException.hpp
src/: main.cpp
src/application/config/: ConfigManager.cpp
src/application/controllers/: ApplicationController.cpp
src/application/monitor/: SystemMonitor.cpp
src/connector/: ConnectorImpl.cpp
src/connector/bus/: RemoteCommandBus.cpp
src/connector/client/: WebSocketClientIx.cpp
src/connector/controllers/: HeartbeatController.cpp  PrinterCheckController.cpp  PrinterCommandController.cpp  PrinterControlController.cpp
src/connector/events/heartbeat/: HeartbeatReceiver.cpp  HeartbeatSender.cpp
src/connector/events/printer-check/: PrinterCheckReceiver.cpp  PrinterCheckSender.cpp
src/connector/events/printer-command/: PrinterCommandReceiver.cpp  PrinterCommandSender.cpp
src/connector/handlers/: PingCommandHandler.cpp
src/connector/kafka/: KafkaConfig.cpp  KafkaConsumerBase.cpp  KafkaProducerBase.cpp
src/connector/processors/heartbeat/: HeartbeatProcessor.cpp
src/connector/processors/printer-check/: PrinterCheckProcessor.cpp
src/connector/processors/printer-command/: PrinterCommandProcessor.cpp
src/connector/processors/printer-control/: PrinterControlProcessor.cpp
src/connector/utils/: Config.cpp
src/core/: CommandBuilder.cpp  CommandContext.cpp  CommandExecutor.cpp  DriverInterface.cpp  SerialPort.cpp
src/core/command/: CommandCategoryInterface.cpp
src/core/command/endstop/: EndstopCommands.cpp
src/core/command/extruder/: ExtruderCommands.cpp
src/core/command/fan/: FanCommands.cpp
src/core/command/history/: HistoryCommands.cpp
src/core/command/motion/: MotionCommands.cpp
src/core/command/system/: SystemCommands.cpp
src/core/command/temperature/: TemperatureCommands.cpp
src/core/logger/: Logger.cpp
src/core/printer/impl/: RealPrinter.cpp
src/core/queue/: CommandExecutorQueue.cpp
src/logger/: Logger.cpp
src/translator/: GCodeTranslator.cpp
(+14 files in other folders)
